# stereo

./: CMakeLists.txt  Readme.md
image/stereo/: calibrationSession.mat
include/: De_distortion.h
param/: left_camera.yml  right_camera.yml  stereo.yml
src/: De_distortion.cpp  main.cpp
